# gtstore

./: .gitignore  README.md  build.sh  killNodes.sh  run.sh  test.sh
src/: CMakeLists.txt  grpc.cmake
src/client/: client.cpp
src/common/: GTManagerInternalServiceClient.cpp  GTManagerServiceClient.cpp  GTStorageServiceClient.cpp
src/include/: argutils.hpp  client.hpp  gtstore.hpp
src/include-internal/: GTManagerInternalServiceClient.hpp  GTManagerServiceClient.hpp  GTStorageServiceClient.hpp  common.hpp
src/protocol/: gtstore.proto
src/server/: manager.cpp  storage.cpp
src/test/: perf_test_app.cpp  test_app.cpp
